NOJIRA Update help docs (synchronize with IU KB)
git-svn-id: https://source.sakaiproject.org/svn/web/trunk@76962 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/web-help/src/sakai_iframe_site/aqyv.html
+++ b/web-help/src/sakai_iframe_site/aqyv.html
@@ -39,22 +39,22 @@ Chat Messages) used in your site. </p>
 
 <h3>Key concepts</h3>
 
-<p><strong>Content options:</strong> You can display a web page or text
-in your Site Information Display box. For instructions, see <a href="content.hlp?docId=arcl">Adding content to the Site Information Display box</a>.</p>
+<p><strong>Content options:</strong> You can display a web page or
+text in your Site Information Display box; see <a href="content.hlp?docId=arcl">Adding content to the Site Information Display box</a>.</p>
 
 <p><strong>Messages and Forums Notifications:</strong> A summary of
-all new and unread messages that exist in the site. For more
-information, see <a href="content.hlp?docId=auut">Messages and Forums notifications</a>.
+all new and unread messages that exist in the site; see <a href="content.hlp?docId=auut">Messages and Forums notifications</a>.
 </p><h3>Things to consider</h3>
 
-<ul><li>Whatever you display inside Site Information Display will be viewable
-by everyone with access to your site.
+<ul><li>Anything you display inside Site Information Display will be
+viewable by everyone with access to your site.
 </li><li>Instructors are visible within a course site by default.
 </li></ul>
 
+<h3>Help documentation</h3>
 
-
-
+<p>For help documentation about Home and Site Information Display, see
+<a href="content.hlp?docId=argh">Home/Worksite Information</a>.</p>
 
 
 </div>
