--- a/web-help/src/sakai_news/arcf.html
+++ b/web-help/src/sakai_news/arcf.html
@@ -42,9 +42,9 @@ as publicly accessible personal journals), events listings, or the
 revision history of a book.
 </li></ul>
 
+<h3>Help documentation</h3>
 
-
-
+<p>For help documentation about the News tool, see <a href="content.hlp?docId=argf">News</a>.</p>
 
 
 </div>
