--- a/web-help/src/sakai_iframe/arcm.html
+++ b/web-help/src/sakai_iframe/arcm.html
@@ -17,14 +17,13 @@ item</title>
 <h2>Adding, editing, or deleting a Web Content
 item</h2><a name="top"> </a>
 
+<p>You can add a link to an external web site, or Web Content item, in
+the <a href="content.hlp?docId=arcc">menubar</a> for your course or project site if you have the
+appropriate permissions.  Anyone can add a Web Content item to <a href="content.hlp?docId=aqzy">My
+Workspace</a>.</p>
 
-<p>You can add a link to an external web site, or Web Content item, in the
-<a href="content.hlp?docId=arcc">menubar</a> for your class or project worksite if you have the
-appropriate permissions.</p>
-
-<p>Anyone can add a Web Content item to <a href="content.hlp?docId=aqzy">My Workspace</a>.</p>
 <p>For additional instructions on editing or removing items from your
-worksite, see <a href="content.hlp?docId=arbj">Adding, editing, or deleting tools on the menubar from Worksite Setup</a></p>
+site, see <a href="content.hlp?docId=ardx">Adding, editing, or removing tools</a>.</p>
 
 <p>On this page:</p>
 
@@ -34,7 +33,7 @@ site's menubar</a>
 </li><li><a href="#addtoworkspace">Adding a Web Content item to My Workspace</a>
 </li><li><a href="#edit">Editing a Web Content item</a>
 </li><li><a href="#delete">Deleting a Web Content item</a>
-</li><li><a href="#demonstrations">Feature demonstrations</a></li></ul>
+</li></ul>
 <hr />
 
 <a name="addtocourse"> </a><h3>Adding a Web Content item to a course or
@@ -43,21 +42,27 @@ project site's menubar</h3>
 <p><strong>Note:</strong> You must have the appropriate permissions to
 add a Web Content item to a course or <a href="content.hlp?docId=ardt">project site</a>.</p>
 
-<ol><li>In the relevant course or project site, click <strong><code>Site Info</code></strong>. 
+<ol><li>In the relevant course or project site, click <strong><code>Site Info</code></strong>.
+
 <br /><br />
 </li><li>On the Site
-Info page, click <strong><code>Edit Tools</code></strong>.  <br /><br />
-</li><li>Check the box next to <strong><code>Web Content</code></strong>. (If your worksite
+Info page, click <strong><code>Edit Tools</code></strong>.  
+
+<br /><br />
+</li><li>Check the box next to <strong><code>Web Content</code></strong>. (If your site
 already contains Web Content items, they will be listed with the title
 you gave them, or "Web Content" if you did not change the title,
 although you should see an additional empty box labeled <strong><code>Web
-Content</code></strong>; check this one.) Click <strong><code>Continue</code></strong>.  <br /><br />
-</li><li>On the "Customize Tools" screen, enter the following information: 
+Content</code></strong>; check this one.) Click <strong><code>Continue</code></strong>.  
+
+<br /><br />
+</li><li>On the "Add Multiple Tool Instances" screen, enter the following
+information:
 
 <br /><br />
 
 <ul><li>In the "Title:" field, add a title. 
-</li><li>In the "URL:" field, enter a URL after the
+</li><li>In the "source" field, enter a URL after the
 "http://" that already appears in the field.
 </li><li>If you'd like to add more than one item, select the appropriate
 number of items from the <strong><code>More Web Content Tools?</code></strong>
@@ -66,12 +71,12 @@ drop-down menu.
 
 <br />
 </li><li>Click <strong><code>Continue</code></strong>. You will see information about the
-changes you have made to your worksite. Click <strong><code>Finish</code></strong>, or, if
+changes you have made to your site. Click <strong><code>Finish</code></strong>, or, if
 you would like to make further changes, click <strong><code>Back</code></strong>. Click
 <strong><code>Cancel</code></strong> to cancel your changes.
 </li></ol>
-<a href="#top">Back to top</a>
-<br />
+
+<p><a href="#top">Back to top</a></p>
 
 <a name="addtoworkspace"> </a><h3>Adding a Web Content item to My Workspace</h3>
 
@@ -79,8 +84,8 @@ you would like to make further changes, click <strong><code>Back</code></strong>
 
 
 <br /><br />
-</li><li>On the Worksite Setup page, you will see all your worksites
-listed. To add a Web Content item to your My Workspace area, check the
+</li><li>On the Worksite Setup page, you will see all your sites
+listed. To add a Web Content item to My Workspace, check the
 box next to <strong><code>My Workspace</code></strong>. To add a Web Content item to one of
 the sites that you manage, check the box next to the site's name.
 
@@ -88,19 +93,20 @@ the sites that you manage, check the box next to the site's name.
 </li><li>Click <strong><code>Edit</code></strong>. On the next page, click <strong><code>Edit Tools</code></strong>.
 
 <br /><br />
-</li><li>Check the box next to <strong><code>Web Content</code></strong>. (If your worksite
+</li><li>Check the box next to <strong><code>Web Content</code></strong>. (If your site
 already contains Web Content items, they will be listed with the title
 you gave them, or "Web Content" if you did not change the title,
 although you should see an additional empty box labeled <strong><code>Web
 Content</code></strong>; check this one.) Click <strong><code>Continue</code></strong>.
 
 <br /><br />
-</li><li>On the "Customize Tools" screen, enter the following information:
+</li><li>On the "Add Multiple Tool Instances" screen, enter the following
+information:
 
 <br /><br />
 
 <ul><li>In the "Title:" field, add a title. 
-</li><li>In the "URL:" field, enter a URL after the
+</li><li>In the "source" field, enter a URL after the
 "http://" that already appears in the field.
 </li><li>If you'd like to add more than one item, select the appropriate
 number of items from the drop-down <strong><code>More Web Content Tools?</code></strong>
@@ -109,26 +115,31 @@ menu.
 
 <br />
 </li><li>Click <strong><code>Continue</code></strong>. You will see information about the
-changes you have made to your worksite. Click <strong><code>Finish</code></strong>, or, if
+changes you have made to your site. Click <strong><code>Finish</code></strong>, or, if
 you would like to make further changes, click <strong><code>Back</code></strong>. Click
 <strong><code>Cancel</code></strong> to cancel your changes.
 </li></ol>
 
 <p>You should now see a link in the menubar to the Web Content item
 with the title you provided.</p>
-<a href="#top">Back to top</a>
 
-<br />
+<p><a href="#top">Back to top</a></p>
 
 <a name="edit"> </a><h3>Editing a Web Content item</h3>
 
 <p>To edit an existing Web Content item:</p>
 
 <ol><li>In your site's menubar, click the title of the appropriate Web
-Content item.<br /><br />
-</li><li>Near the top of the Web Content frame, click <strong><code>Options</code></strong>.<br /><br />
+Content item.
+
+<br /><br />
+</li><li>Near the top of the Web Content frame, click <strong><code>Options</code></strong>.
+
+<br /><br />
 </li><li>On the
-"Customize Web Content" form, you can change the the following:<br /><br />
+"Customize Web Content" form, you can change the the following:
+
+<br /><br />
 
 <ul><li><strong>Tool Title:</strong> The title that appears at the top of
 the Web Content frame
@@ -140,18 +151,14 @@ Web Content frame
 </li></ul><br />
 </li><li>To make your Web Content item open in a new browser
 window, check the box next to <strong><code>Open in a new window? </code></strong>.
-Additionally, you may choose to show the browser toolbar by checking
-the box next to <strong><code>If opening in new window, show browser
-toolbar? </code></strong>.
 
 
 <br /><br />
 </li><li>When you're finished, click <strong><code>Update Options</code></strong> to save your
 changes, or <strong><code>Cancel</code></strong> to cancel your changes.
 </li></ol>
-<a href="#top">Back to top</a>
 
-<br />
+<p><a href="#top">Back to top</a></p>
 
 <a name="delete"> </a><h3>Deleting a Web Content item</h3>
 
@@ -159,9 +166,11 @@ changes, or <strong><code>Cancel</code></strong> to cancel your changes.
 <strong><code>Worksite Setup</code></strong>.
 <br /><br />
 </li><li>If you want to remove a Web Content item from a course or project
-site, check the box next to the name of the worksite. If you want to
+site, check the box next to the name of the site. If you want to
 remove a Web Content item from My Workspace, check the box next to
-<strong><code>My Workspace</code></strong>.  <br /><br />
+<strong><code>My Workspace</code></strong>.  
+
+<br /><br />
 </li><li>Click <strong><code>Edit</code></strong>. Then click
 <strong><code>Edit Tools</code></strong>. 
 
@@ -172,14 +181,12 @@ click <strong><code>Continue</code></strong>. Review your information, and then 
 
 <p><strong>Note:</strong> If your Web Content item still appears in
 the site's menubar, click <strong><code>Home</code></strong> to refresh the menubar. </p>
-<a href="#top">Back to top</a>
 
-<br />
+<p><a href="#top">Back to top</a></p>
 
 <a name="demonstrations"> </a>
 
 
-<a href="#top">Back to top</a>
 
 </div>
 </body></html>
