--- a/web-help/src/sakai_iframe_site/aqzs.html
+++ b/web-help/src/sakai_iframe_site/aqzs.html
@@ -16,10 +16,10 @@ Information Display box</title>
 <div class="helpBody">
 <h2>Changing the size of your site's Site
 Information Display box</h2>
-<p><strong>Note:</strong> To complete the procedures in this
-document, you must be assigned a role having the necessary
-permissions.  To determine your role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a
-basic understanding of roles and permissions, see <a href="content.hlp?docId=arax">Permissions and roles: Overview</a>.</p>
+<p><strong>Note:</strong> To complete these procedures, you
+must be assigned a role having the necessary permissions.  To
+determine your role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a basic understanding of roles and
+permissions, see <a href="content.hlp?docId=arax">Permissions and roles: Overview</a>.</p>
 
 <p>To change the size of your site's Site Information Display box:</p>
 
