--- a/web-help/src/sakai_iframe_site/arcl.html
+++ b/web-help/src/sakai_iframe_site/arcl.html
@@ -31,15 +31,19 @@ Display box</h2>
 
 <a name="tops"> </a>
 
-<p><strong>Note:</strong> To complete the procedures in this
-document, you must be assigned a role having the necessary
-permissions.  To determine your role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a
-basic understanding of roles and permissions, see <a href="content.hlp?docId=arax">Permissions and roles: Overview</a>.</p>
+<p><strong>Note:</strong> To complete these procedures, you
+must be assigned a role having the necessary permissions.  To
+determine your role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a basic understanding of roles and
+permissions, see <a href="content.hlp?docId=arax">Permissions and roles: Overview</a>.</p>
 
 <p>The Site Information Display box is located on a site's home page in the
 column next to the <a href="content.hlp?docId=arcc">menubar</a>. You can display either a
 web page or text in the box. Depending on the kind of content you
 want to provide, follow the appropriate instructions below.</p>
+
+<p>On this page:</p>
+
+
 
 <ul><li><a href="#webs">Adding a web page</a></li><li><a href="#texts">Adding a text description</a></li><li><a href="#HTMLs">Adding your own HTML file</a></li></ul>
 
