--- a/web-help/src/sakai_news/arak.html
+++ b/web-help/src/sakai_news/arak.html
@@ -15,11 +15,10 @@
 <div class="helpBody">
 <h2>Viewing a news feed</h2>
 <p>If your site has a link to a news feed, you will find it in the site's
-<a href="content.hlp?docId=arcc">menubar</a>. To view news, simply click the title of the news
-feed from the menubar. The title will vary, depending on what the
-site owner has chosen for your site's news feed. You may see
-<strong><code>News</code></strong> in the menubar, or something more descriptive, e.g.,
-<strong><code>New York Times</code></strong>, <strong><code>CNN</code></strong>, or <strong><code>Yahoo! News</code></strong>.</p>
+<a href="content.hlp?docId=arcc">menubar</a>. To view news, click the title of the news feed
+from the menubar. Depending on how the site owner has set up the feed,
+you may see <strong><code>News</code></strong> in the menubar, or a more descriptive title,
+e.g., <strong><code>New York Times</code></strong>, <strong><code>CNN</code></strong>, or <strong><code>Yahoo!  News</code></strong>.</p>
 
 <p>The News tool in a course or project site is an RSS "news
 aggregator" (or newsreader) that reads and displays continuously
@@ -27,8 +26,7 @@ updated online content from RSS news feeds. RSS is an application of
 XML, a markup language for creating web documents.</p>
 
 <p>In addition to news, some web sites use the RSS format for information
-that is updated often, such as blogs (web logs that serve as publicly
-accessible personal journals), events listings, or the revision
+that is updated often, such as blogs, events listings, or the revision
 history of a book. You can usually identify an RSS feed URL by the
 <code>.xml</code> or <code>.rss</code> in the URL (e.g.,
 http://www.nytimes.com/services/xml/rss/nyt/Movies.xml
