NOJIRA Update help docs (synchronize with IU KB)
git-svn-id: https://source.sakaiproject.org/svn/web/trunk@78402 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/web-help/src/sakai_iframe/arcm.html
+++ b/web-help/src/sakai_iframe/arcm.html
@@ -23,7 +23,7 @@ appropriate permissions.  Anyone can add a Web Content item to <a href="content.
 Workspace</a>.</p>
 
 <p>For additional instructions on editing or removing items from your
-site, see <a href="content.hlp?docId=ardx">Adding, editing, or removing tools</a>.</p>
+site, see <a href="content.hlp?docId=ardx">Adding, removing, hiding, or reordering tools</a>.</p>
 
 <p>On this page:</p>
 
