--- a/web-help/src/sakai_iframe/arcb.html
+++ b/web-help/src/sakai_iframe/arcb.html
@@ -16,8 +16,8 @@
 <h2>Web Content: Overview</h2>
 <h3>What it does</h3>
 
-<p>The Web Content tool allows site owners to choose external web sites to
-display within their worksites.</p>
+<p>The Web Content tool allows site owners to
+display external web sites within their worksites.</p>
 
 <h3>Key concepts</h3>
 
@@ -25,7 +25,10 @@ display within their worksites.</p>
 specify the URL for any web site and a brief descriptive
 title. A link will appear in the <a href="content.hlp?docId=arcc">menubar</a> with the title
 you've chosen; when you click the link, the web site will open within
-your worksite. You may add multiple Web Content links to your menubar.</p>
+your worksite.</p>
+
+<p><strong>Multiple links:</strong> You may add multiple Web Content
+links to your menubar.</p>
 
 <h3>Things to consider</h3>
 
@@ -35,7 +38,13 @@ most of them in the Resources section.
 
 <br /><br />
 </li><li>Departments, collaborations, or other groups may use the Web Content
-tool to provide a prominent link to their public worksites.</li></ul>
+tool to provide a prominent link to their public worksites.
+
+<br /><br />
+</li><li>Some web sites may have coding that prevents them from opening within
+a frame (i.e., the page will take over the whole browser when you click the
+link, rather than displaying within the application).  
+</li></ul>
 
 
 
