--- a/web-help/src/sakai_iframe_site/arcl.html
+++ b/web-help/src/sakai_iframe_site/arcl.html
@@ -31,9 +31,9 @@ Display box</h2>
 
 <a name="tops"> </a>
 
-<p><strong>Note:</strong> To complete these procedures, you
-must be assigned a role having the necessary permissions.  To
-determine your role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a basic understanding of roles and
+<p><strong>Note:</strong> To complete these procedures, you must be
+assigned a role having the necessary permissions.  To determine your
+role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a basic understanding of roles and
 permissions, see <a href="content.hlp?docId=arax">Permissions and roles: Overview</a>.</p>
 
 <p>The Site Information Display box is located on a site's home page in the
