NOJIRA Update help docs (synchronize with IU KB)
git-svn-id: https://source.sakaiproject.org/svn/web/trunk@82449 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/web-help/src/sakai_iframe_site/aqyv.html
+++ b/web-help/src/sakai_iframe_site/aqyv.html
@@ -31,11 +31,10 @@
 
 <h3>What it does</h3> 
 
-<p>On the Home page of each <a href="content.hlp?docId=ardt">course site</a> or <a href="content.hlp?docId=ardt">project
-site</a>, you will see areas for general information (e.g., Site
-Information Display) and synoptic views for communication tools (e.g.,
-Recent Announcements, Messages and Forums Notifications, and Recent
-Chat Messages) used in your site. </p>
+<p>On the Home page of each site, you will see areas for general
+information (e.g., Site Information Display) and synoptic views for
+communication tools (e.g., Recent Announcements, Messages and Forums
+Notifications, and Recent Chat Messages) used in your site.</p>
 
 <h3>Key concepts</h3>
 
