NOJIRA Update help docs (synchronize with IU KB)
git-svn-id: https://source.sakaiproject.org/svn/web/trunk@83794 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/web-help/src/sakai_iframe_site/aqyv.html
+++ b/web-help/src/sakai_iframe_site/aqyv.html
@@ -39,7 +39,7 @@ Notifications, and Recent Chat Messages) used in your site.</p>
 <h3>Key concepts</h3>
 
 <p><strong>Content options:</strong> You can display a web page or
-text in your Site Information Display box; see <a href="content.hlp?docId=arcl">Adding content to the Site Information Display box</a>.</p>
+text in your Site Information Display box; see <a href="content.hlp?docId=arcl">Editing content in the Site Information Display box</a>.</p>
 
 <p><strong>Messages and Forums Notifications:</strong> A summary of
 all new and unread messages that exist in the site; see <a href="content.hlp?docId=auut">Messages and Forums notifications</a>.
