--- a/web-help/src/sakai_iframe_site/arcl.html
+++ b/web-help/src/sakai_iframe_site/arcl.html
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html><head>
-<title>Adding content to the Site Information
+<title>Editing content in the Site Information
 Display box</title>
 <style type="text/css">
 		/* Style for specific inline images */
@@ -14,7 +14,7 @@ Display box</title>
 </head>
 <body>
 <div class="helpBody">
-<h2>Adding content to the Site Information
+<h2>Editing content in the Site Information
 Display box</h2>
 
 
@@ -36,10 +36,11 @@ assigned a role having the necessary permissions.  To determine your
 role, follow the directions in <a href="content.hlp?docId=arbu">Participant roles</a>.  For a basic understanding of roles and
 permissions, see <a href="content.hlp?docId=arax">Permissions and roles: Overview</a>.</p>
 
-<p>The Site Information Display box is located on a site's home page in the
-column next to the <a href="content.hlp?docId=arcc">menubar</a>. You can display either a
-web page or text in the box. Depending on the kind of content you
-want to provide, follow the appropriate instructions below.</p>
+<p>The Site Information Display box is located on a site's home page in
+the column next to the <a href="content.hlp?docId=arcc">menubar</a>.  You can display either a
+web page or text in the box; you can also change the size of the
+box. Depending on the content you want to add or edit, follow the
+appropriate instructions below.</p>
 
 <p>On this page:</p>
 
@@ -71,7 +72,7 @@ Display box, or keep the default or current title.
 
 <br /><br />
 </li><li>Use the "Frame Height" drop-down list to set the height for your
-Site Information Display box.
+Site Information Display box. You cannot change the width of the box.
 
 <p><strong>Note:</strong> Most web pages display better in a taller
 box (600 or more pixels).</p>
@@ -109,7 +110,7 @@ Display box, or keep the default or current title.
 
 <br /><br />
 </li><li>Use the "Frame height" drop-down list to set the height for your
-Worksite Information box.
+Worksite Information box. You cannot change the width of the box.
 
 <br /><br />
  </li><li>Under "Description", enter the text you wish to display.
