--- a/web-help/src/sakai_iframe_site/argh.html
+++ b/web-help/src/sakai_iframe_site/argh.html
@@ -42,8 +42,7 @@ Messages) used in your site. <a href="content.hlp?docId=aqyv">More...</a></p>
 
 <p>For instructions about Home/Worksite Information, see:</p>
 
-<ul><li><a href="content.hlp?docId=arcl">Adding content to the Site Information Display box</a>
-</li><li><a href="content.hlp?docId=aqzs">Changing the size of your site's Site Information Display box</a>
+<ul><li><a href="content.hlp?docId=arcl">Editing content in the Site Information Display box</a>
 </li><li><a href="content.hlp?docId=ausi">Changing your privacy status</a>
 </li><li><a href="content.hlp?docId=auut">Messages and Forums notifications</a>
 </li></ul>
