NOJIRA Update help docs (synchronize with IU KB)
git-svn-id: https://source.sakaiproject.org/svn/web/trunk@85072 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/web-help/src/sakai_iframe/arcm.html
+++ b/web-help/src/sakai_iframe/arcm.html
@@ -25,6 +25,8 @@ Workspace</a>.</p>
 <p>For additional instructions on editing or removing items from your
 site, see <a href="content.hlp?docId=ardx">Adding, removing, hiding, or reordering tools</a>.</p>
 
+
+
 <p>On this page:</p>
 
 
@@ -49,11 +51,11 @@ add a Web Content item to a course or <a href="content.hlp?docId=ardt">project s
 Info page, click <strong><code>Edit Tools</code></strong>.  
 
 <br /><br />
-</li><li>Check the box next to <strong><code>Web Content</code></strong>. (If your site
-already contains Web Content items, they will be listed with the title
-you gave them, or "Web Content" if you did not change the title,
-although you should see an additional empty box labeled <strong><code>Web
-Content</code></strong>; check this one.) Click <strong><code>Continue</code></strong>.  
+</li><li>Check <strong><code>Web Content</code></strong>. (If your site already contains Web
+Content items, they will be listed with the title you gave them, or
+"Web Content" if you did not change the title, although you should see
+an additional empty box labeled <strong><code>Web Content</code></strong>; check this one.)
+Click <strong><code>Continue</code></strong>.
 
 <br /><br />
 </li><li>On the "Add Multiple Tool Instances" screen, enter the following
@@ -84,20 +86,20 @@ you would like to make further changes, click <strong><code>Back</code></strong>
 
 
 <br /><br />
-</li><li>On the Worksite Setup page, you will see all your sites
-listed. To add a Web Content item to My Workspace, check the
-box next to <strong><code>My Workspace</code></strong>. To add a Web Content item to one of
-the sites that you manage, check the box next to the site's name.
+</li><li>On the Worksite Setup page, you will see all your sites listed. To
+add a Web Content item to My Workspace, check <strong><code>My
+Workspace</code></strong>. To add a Web Content item to one of the sites that you
+manage, check the box next to the site's name.
 
 <br /><br />
 </li><li>Click <strong><code>Edit</code></strong>. On the next page, click <strong><code>Edit Tools</code></strong>.
 
 <br /><br />
-</li><li>Check the box next to <strong><code>Web Content</code></strong>. (If your site
-already contains Web Content items, they will be listed with the title
-you gave them, or "Web Content" if you did not change the title,
-although you should see an additional empty box labeled <strong><code>Web
-Content</code></strong>; check this one.) Click <strong><code>Continue</code></strong>.
+</li><li>Check <strong><code>Web Content</code></strong>. (If your site already contains Web
+Content items, they will be listed with the title you gave them, or
+"Web Content" if you did not change the title, although you should see
+an additional empty box labeled <strong><code>Web Content</code></strong>; check this one.)
+Click <strong><code>Continue</code></strong>.
 
 <br /><br />
 </li><li>On the "Add Multiple Tool Instances" screen, enter the following
@@ -109,7 +111,7 @@ information:
 </li><li>In the "source" field, enter a URL after the
 "http://" that already appears in the field.
 </li><li>If you'd like to add more than one item, select the appropriate
-number of items from the drop-down <strong><code>More Web Content Tools?</code></strong>
+number of items from the <strong><code>More Web Content Tools?</code></strong> drop-down
 menu.
 </li></ul>
 
@@ -150,7 +152,7 @@ Web Content frame
 </li><li><strong>URL:</strong> The URL for the Web Content item
 </li></ul><br />
 </li><li>To make your Web Content item open in a new browser
-window, check the box next to <strong><code>Open in a new window? </code></strong>.
+window, check <strong><code>Open in a new window?</code></strong>
 
 
 <br /><br />
@@ -165,10 +167,9 @@ changes, or <strong><code>Cancel</code></strong> to cancel your changes.
 <ol><li>To delete a Web Content item, click <strong><code>My Workspace</code></strong>, and then click
 <strong><code>Worksite Setup</code></strong>.
 <br /><br />
-</li><li>If you want to remove a Web Content item from a course or project
-site, check the box next to the name of the site. If you want to
-remove a Web Content item from My Workspace, check the box next to
-<strong><code>My Workspace</code></strong>.  
+</li><li>To remove a Web Content item from a course or project site, check
+the box next to the name of the site. If you want to remove a Web
+Content item from My Workspace, check <strong><code>My Workspace</code></strong>.
 
 <br /><br />
 </li><li>Click <strong><code>Edit</code></strong>. Then click
@@ -184,7 +185,7 @@ the site's menubar, click <strong><code>Home</code></strong> to refresh the menu
 
 <p><a href="#top">Back to top</a></p>
 
-<a name="demonstrations"> </a>
+<a name="demos"> </a>
 
 
 
