NOJIRA Update help docs (synchronize with IU KB)
git-svn-id: https://source.sakaiproject.org/svn/web/trunk@85252 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/web-help/src/sakai_iframe/arcm.html
+++ b/web-help/src/sakai_iframe/arcm.html
@@ -52,9 +52,9 @@ Info page, click <strong><code>Edit Tools</code></strong>.
 
 <br /><br />
 </li><li>Check <strong><code>Web Content</code></strong>. (If your site already contains Web
-Content items, they will be listed with the title you gave them, or
-"Web Content" if you did not change the title, although you should see
-an additional empty box labeled <strong><code>Web Content</code></strong>; check this one.)
+Content items, they will be listed with either the title you gave them
+or, if you did not change the title, "Web Content". You should see an
+additional empty box labeled <strong><code>Web Content</code></strong>; check this one.)
 Click <strong><code>Continue</code></strong>.
 
 <br /><br />
@@ -96,9 +96,9 @@ manage, check the box next to the site's name.
 
 <br /><br />
 </li><li>Check <strong><code>Web Content</code></strong>. (If your site already contains Web
-Content items, they will be listed with the title you gave them, or
-"Web Content" if you did not change the title, although you should see
-an additional empty box labeled <strong><code>Web Content</code></strong>; check this one.)
+Content items, they will be listed with either the title you gave them
+or, if you did not change the title, "Web Content". You should see an
+additional empty box labeled <strong><code>Web Content</code></strong>; check this one.)
 Click <strong><code>Continue</code></strong>.
 
 <br /><br />
