--- a/web-help/src/sakai_news/argf.html
+++ b/web-help/src/sakai_news/argf.html
@@ -25,7 +25,7 @@ appear in another web site. <a href="content.hlp?docId=arcf">More...</a></p>
 
 
 
-<ul><li><a href="content.hlp?docId=areh">Adding, editing, or deleting a news feed</a></li><li><a href="content.hlp?docId=arak">Viewing a news feed</a></li></ul>
+<ul><li><a href="content.hlp?docId=areh">Adding, editing, or deleting a news feed</a></li><li><a href="content.hlp?docId=arak">Viewing or adding a news feed</a></li></ul>
 
 
 
