--- a/web-help/src/sakai_news/arak.html
+++ b/web-help/src/sakai_news/arak.html
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html><head>
-<title>Viewing a news feed</title>
+<title>Viewing or adding a news feed</title>
 <style type="text/css">
 		/* Style for specific inline images */
 		
@@ -13,30 +13,28 @@
 </head>
 <body>
 <div class="helpBody">
-<h2>Viewing a news feed</h2>
-<p>If your site has a link to a news feed, you will find it in the site's
-<a href="content.hlp?docId=arcc">menubar</a>. To view news, click the title of the news feed
-from the menubar. Depending on how the site owner has set up the feed,
+<h2>Viewing or adding a news feed</h2>
+<p>If your site has a link to a news feed, it will appear in the site's
+<a href="content.hlp?docId=arcc">menubar</a>. Depending on how the site owner has set up the feed,
 you may see <strong><code>News</code></strong> in the menubar, or a more descriptive title,
 e.g., <strong><code>New York Times</code></strong>, <strong><code>CNN</code></strong>, or <strong><code>Yahoo!  News</code></strong>.</p>
 
 <p>The News tool in a course or project site is an RSS "news
 aggregator" (or newsreader) that reads and displays continuously
-updated online content from RSS news feeds. RSS is an application of
-XML, a markup language for creating web documents.</p>
+updated online content from RSS news feeds. If you have the necessary
+permissions, you can customize your course or project site's News
+feature by adding a web address for any RSS news feed.</p>
 
 <p>In addition to news, some web sites use the RSS format for information
-that is updated often, such as blogs, events listings, or the revision
-history of a book. You can usually identify an RSS feed URL by the
-<code>.xml</code> or <code>.rss</code> in the URL (e.g.,
+that is updated often, such as blogs, events listings, or
+the revision history of a book. You can usually identify an RSS feed
+URL by the <code>.xml</code> or <code>.rss</code> in the URL (e.g.,
 http://www.nytimes.com/services/xml/rss/nyt/Movies.xml
-or http://rss.cnn.com/rss/cnn_topstories.rss).</p>
+or http://rss.cnn.com/rss/cnn_topstories.rss). You
+can also search the web for RSS feeds pertaining to a certain interest
+or publication.</p>
 
-<p>If you have the necessary permissions, you can customize your course
-or project site's News feature by adding a web address for any RSS
-news feed. You can find many feeds by searching Google for RSS feeds
-in your area of interest or for a particular online publication or
-news source.</p>
+<p />
 
 
 
