NOJIRA Update help docs (synchronize with IU KB)
git-svn-id: https://source.sakaiproject.org/svn/web/trunk@85361 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/web-help/src/sakai_iframe_site/aqyv.html
+++ b/web-help/src/sakai_iframe_site/aqyv.html
@@ -33,8 +33,8 @@
 
 <p>On the Home page of each site, you will see areas for general
 information (e.g., Site Information Display) and synoptic views for
-communication tools (e.g., Recent Announcements, Messages and Forums
-Notifications, and Recent Chat Messages) used in your site.</p>
+communication tools (e.g., Recent Announcements, Recent Chat Messages,
+and notifications of unread messages and forums) used in your site.</p>
 
 <h3>Key concepts</h3>
 
