--- a/web-help/src/sakai_iframe_site/argh.html
+++ b/web-help/src/sakai_iframe_site/argh.html
@@ -33,10 +33,9 @@
 
 <p>On the Home page of each <a href="content.hlp?docId=ardt">course site</a> or <a href="content.hlp?docId=ardt">project
 site</a>, you will see areas for general information (e.g., Site
-Information Display) and synoptic views for communication tools (e.g., Recent
-Announcements, Messages and Forums Notifications, and Recent Chat
-Messages) used in your site. <a href="content.hlp?docId=aqyv">More...</a></p>
-
+Information Display) and synoptic views for communication tools (e.g.,
+Recent Announcements, Recent Chat Messages, and notifications of
+unread messages and forums) used in your site. <a href="content.hlp?docId=aqyv">More...</a></p>
 
 <h3>How do I?</h3>
 
