NOJIRA Update help docs (synchronize with IU KB)
git-svn-id: https://source.sakaiproject.org/svn/web/trunk@88968 66ffb92e-73f9-0310-93c1-f5514f145a0a

--- a/web-help/src/sakai_iframe_site/arcl.html
+++ b/web-help/src/sakai_iframe_site/arcl.html
@@ -39,8 +39,7 @@ permissions, see <a href="content.hlp?docId=arax">Permissions and roles: Overvie
 <p>The Site Information Display box is located on a site's home page in
 the column next to the <a href="content.hlp?docId=arcc">menubar</a>.  You can display either a
 web page or text in the box; you can also change the size of the
-box. Depending on the content you want to add or edit, follow the
-appropriate instructions below.</p>
+box.</p>
 
 <p>On this page:</p>
 
@@ -54,11 +53,8 @@ appropriate instructions below.</p>
 
 <p>To make a web page appear in the Site Information Display box:</p>
 
-<ol><li>Select a <a href="content.hlp?docId=ardt">course site</a> or <a href="content.hlp?docId=ardt">project site</a>.
-
-<br /><br /> 
-</li><li>If the site's home page is not already open, click <strong><code>Home</code></strong> in
-the menubar.
+<ol><li>In the site you want to edit, if the site's home page is not
+already open, click <strong><code>Home</code></strong> in the menubar.
 
 <br /><br /> 
 </li><li>In the Site Information Display box, click <strong><code>Options</code></strong>.
@@ -92,11 +88,8 @@ to view your new Site Information Display.</p>
 
 <p>To add a text description:</p>
 
-<ol><li>Select the course or project site.
-
-<br /><br />
-</li><li>If the site's home page is not already open, click <strong><code>Home</code></strong> in
-the menubar.
+<ol><li>In the site you want to edit, if the site's home page is not
+already open, click <strong><code>Home</code></strong> in the menubar.
 
 <br /><br />
 </li><li>In the Site Information Display box, click <strong><code>Options</code></strong>.
@@ -128,11 +121,7 @@ your new Site Information Display.</p>
 
 <p>To display an HTML file you have created and uploaded to the Resources tool:</p>
 
-<ol><li>Depending on where you uploaded the HTML file, select either the
-course or project site or <strong><code>My Workspace</code></strong>.
-
-<br /><br />
-</li><li>Click <strong><code>Resources</code></strong> to view the Resources list.
+<ol><li>Go to Resources in the site to which you uploaded the file.
 
 <br /><br />
 </li><li>Copy the URL of the HTML file by right-clicking the file's name
@@ -142,8 +131,8 @@ Link Location</code></strong>, or <strong><code>Copy Link to Clipboard</code></s
 window and then copy the URL from your browser's address box.)
 
 <br /><br />
-</li><li>If you are not already in the course or project site in which you
-want to display the HTML file, select it.
+</li><li>If you are not already in the site in which you want to display
+the HTML file, select it.
 
 <br /><br />
 </li><li>If the site's home page is not already open, click <strong><code>Home</code></strong> in
