--- a/web-help/src/sakai_iframe_site/arcl.html
+++ b/web-help/src/sakai_iframe_site/arcl.html
@@ -62,7 +62,7 @@ already open, click <strong><code>Home</code></strong> in the menubar.
 <p><strong>Note:</strong> Because the title of the Site Information
 Display box is customizable, the box may be titled something other than
 "Site Information Display" on your site; however, it will always be
-located on your site's home page just beside the menubar.</p>
+located on your site's home page in the column next to the menubar.</p>
 </li><li>In the "Title" field, enter a title for your Site Information
 Display box, or keep the default or current title.
 
@@ -70,7 +70,7 @@ Display box, or keep the default or current title.
 </li><li>Use the "Frame Height" drop-down list to set the height for your
 Site Information Display box. You cannot change the width of the box.
 
-<p><strong>Note:</strong> Most web pages display better in a taller
+<p><strong>Note:</strong> Most web pages display best in a tall
 box (600 or more pixels).</p>
 </li><li>Under "Site Info URL", type the URL (you may omit the
 <code>http://</code> prefix).
@@ -97,7 +97,7 @@ already open, click <strong><code>Home</code></strong> in the menubar.
 <p><strong>Note:</strong> Because the title of the Site Information
 Display box is customizable, the box may be titled something other than
 "Site Information Display" on your site; however, it will always be
-located on your site's home page just beside the menubar.</p>
+located on your site's home page in the column next to the menubar.</p>
 </li><li>In the "Title" field, enter a title for your Site Information
 Display box, or keep the default or current title.
 
@@ -119,16 +119,17 @@ your new Site Information Display.</p>
 
 <a name="HTMLs"> </a><h3>Adding your own HTML file</h3>
 
-<p>To display an HTML file you have created and uploaded to the Resources tool:</p>
+<p>To display an HTML file, first upload it to Resources (see
+<a href="content.hlp?docId=arfs">Resources</a>), and then:</p>
 
 <ol><li>Go to Resources in the site to which you uploaded the file.
 
 <br /><br />
-</li><li>Copy the URL of the HTML file by right-clicking the file's name
+</li><li>Copy the URL of the HTML file by right-clicking the file's name,
 and then selecting your browser's <strong><code>Copy Shortcut</code></strong>, <strong><code>Copy
 Link Location</code></strong>, or <strong><code>Copy Link to Clipboard</code></strong> feature. 
 (Alternatively, you can click the file's name to open it in a new browser 
-window and then copy the URL from your browser's address box.)
+window, and then copy the URL from your browser's address box.)
 
 <br /><br />
 </li><li>If you are not already in the site in which you want to display
@@ -144,7 +145,7 @@ the menubar.
 <p><strong>Note:</strong> Because the title of the Site Information
 Display box is customizable, the box may be titled something other than
 "Site Information Display" on your site; however, it will always be
-located on your site's home page just beside the menubar.</p>
+located on your site's home page in the column next to the menubar.</p>
 </li><li>Paste the URL into the "Site Info URL" field. 
 
 <br /><br />
